--- a/codex/archetypes/templates/aaa.html
+++ b/codex/archetypes/templates/aaa.html
@@ -89,7 +89,7 @@
 {% endblock %}
 
 {% block next %}
-    <a class="next" href="{{ url_for('archetypes.index', sub_page='akunanse-wall') }}'">Akunanse Wall</a>
+    <a class="next" href="{{ url_for('archetypes.index', sub_page='akunanse-wall') }}">Akunanse Wall</a>
 {% endblock %}
 
 {% block script %}
